k8s/apps/home/calibre.yaml
# Create Calibre Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: home
  labels:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/part-of: calibre
    app.kubernetes.io/release: stable
  annotations:
    a8r.io/description: "Calibre is a powerful and easy to use e-book manager. "
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangabit/antennae"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
        app.kubernetes.io/part-of: calibre
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre
        volumeMounts:
        - mountPath: /config
          name: bulk-calibre
          subPath: "calibre"
        - mountPath: /books
          name: bulk-docs
          subPath: "media/docs"
        - mountPath: /comics
          name: bulk-zines
          subPath: "media/comics"
        resources:
          requests:
            memory: 512Mi
            cpu: "1"
          limits:
            memory: 4Gi
            cpu: "4"
      volumes:
        - name: bulk-calibre
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_bulk
            readOnly: false
        - name: bulk-docs
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_bulk
            readOnly: false
        - name: bulk-zines
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_bulk
            readOnly: false

---
# Create calibre Service
apiVersion: v1
kind: Service
metadata:
  name: calibre-service
  namespace: home
  labels:
    app.kubernetes.io/name: calibre-service
    app.kubernetes.io/part-of: calibre
spec:
  selector:
    app.kubernetes.io/name: calibre-web
  ports:
    - port: 8080
      name: calibre-desktop
    - port: 8081
      name: calibre-webserver

---
# Create calibre IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-ingress
  namespace: home
  labels:
    app.kubernetes.io/name: calibre-ingress
    app.kubernetes.io/part-of: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`reader.home.madeof.glass`)
      kind: Rule
      middlewares:
      - name: secure-auth
        namespace: home
      services:
        - name: calibre-service
          port: calibre-desktop
  tls:
    certResolver: letsencrypt
